# badeng

./: CMakeLists.txt
core/: badeng.c
include/: badeng.h
include/scene/: renderer_batch.h  scene.h  scene_manager.h
include/system/: component.h  component_type.h  entity.h  system.h
include/system/component/: com_sprite.h
include/utilities/: checker.h  log.h  mangle.h
include/widget/: layout.h  layout_linear.h  widget.h  widget_child.h  widget_parent.h
scene/: renderer_batch.c  scene.c  scene_manager.c
system/: component.c  entity.c  system.c
system/component/: com_sprite.c
tests/: CMakeLists.txt  test1.c
widget/: layout.c  layout_linear.c  widget.c  widget_child.c  widget_parent.c
